assignments titled home.html and contact.html

--- a/home_assignment.html
+++ b/home_assignment.html
@@ -34,7 +34,7 @@
             <a href="#article1">Home</a> 
             <a href="#article2">About</a>
             <a href="#article3">Project</a> 
-            <a href="contact.html">Contact</a>
+            <a href="contact_assignment.html">Contact</a>
         </nav> 
 
         <div class="container-fluid">
