--- a/contact_assignment.html
+++ b/contact_assignment.html
@@ -31,10 +31,10 @@
 
     <body>
         <nav>
-            <a href="home.html">Home</a> 
-            <a href="home.html">About</a>
-            <a href="home.html">Project</a> 
-            <a href="contact.html">Contact</a>
+            <a href="home_assignment.html">Home</a> 
+            <a href="home_assignment.html">About</a>
+            <a href="home_assignment.html">Project</a> 
+            <a href="contact_assignment.html">Contact</a>
         </nav> 
 
             <article>
