--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
 
     <body>
         <nav>
-            <a href="home.html">Home</a> 
-            <a href="home.html">About</a>
-            <a href="home.html">Project</a> 
+            <a href="home.html#article1">Home</a> 
+            <a href="home.html#article2">About</a>
+            <a href="home.html#article3">Project</a> 
             <a href="contact.html">Contact</a>
         </nav> 
 
